<resources>
    <string name="app_name" translatable="false">Bartender</string>
    <string name="app_name_swag" translatable="false"><b>Bar</b><i>tender</i></string>

    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Options</string>

    <string name="carte">Carte</string>
    <string name="facture">Facture</string>
    <string name="musique">Musique</string>
    <string name="option">Options</string>
    <string name="inventaire">Inventaire</string>
    <string name="title_activity_carte">Carte</string>
    <string name="title_activity_facture">Facture</string>
    <string name="title_activity_musique">Musique</string>
    <string name="title_activity_inventaire">Inventaire</string>
    <string name="title_activity_options">Options</string>
    <string name="title_activity_connexion">Connexion</string>
    <string name="title_activity_description">Produit</string>

    <string name="boisson">Boisson</string>
    <string name="total">Total</string>
    <string name="qteAndPrix">A livrer | Livré ~ Prix</string>

    <string name="description">Description</string>
    <string name="prix">Prix</string>
    <string name="format">Format</string>
    <string name="type">Type</string>
    <string name="taux">Taux alcohol</string>
    <string name="ajouter">Ajouter</string>
    <string name="livrer">Livrer</string>

    <string name="connexion">Connexion</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="langue">Langue</string>
    <string name="mdp">Mot de passe</string>
    <string name="login">Nom</string>
    <string name="valider">Valider</string>
    <string name="numTable">N°Table</string>
    <string name="invite">Client</string>
    <string name="connecteEnTantQue">Connecté en tant que</string>

    <string name="seuil">Seuil</string>
    <string name="stock">Stock</string>

    <string name="appelezServeur">Appelez le serveur pour payer svp!</string>
    <string name="payementValide">Paiement validé</string>

    <string name="boissonAjoutee">Boisson Ajoutée</string>
    <string name="boissonLivree">Boisson Livrée</string>
    <string name="stockVide">Stock Vide</string>

    <string name="annee">Année</string>
    <string name="genre">Genre</string>

    <string name="jeton">Jetons</string>
    <string name="ajoutPlaylist">ajoutée à la playlist</string>
    <string name="noJetons">Vous ne possédez plus de jeton, vous gagnez 1 jeton par tranche de 5€</string>

    <string name="resetFacture">Clôturer Facture</string>
    <string name="title_activity_splash">Bartender</string>
    <string name="badlogin">Nom Incorrect</string>
    <string name="tableSetTo">N°Table est</string>
    <string name="tableIncorrect">Table Incorrecte</string>
    <string name="facture_boisson"><b>Boisson</b></string>

</resources>
