<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="25dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <TextView
            android:id="@+id/produitNom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Orval"
            android:textSize="50dp"
            android:textStyle="bold"
            android:gravity="center"
            style="@style/couleurTexteBase"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:contentDescription="alt"
            android:src="@mipmap/ic_launcher"
            android:id="@+id/descriptionIcon" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            style="@style/couleurTexteBase"/>

        <TextView
            android:id="@+id/produitDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="L'orval est une bière ambrée de fermentation haut, très bonne bière."
            android:paddingBottom="20dp"
            android:gravity="center"/>

        <!-- Prix -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prix"
                android:layout_weight="1"
                android:layout_marginLeft="30dip"
                android:textSize="20dp"
                android:textStyle="bold"
                style="@style/couleurTexteBase"/>
            <TextView
                android:id="@+id/produitPrix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="2,50€"/>
        </LinearLayout>

        <!-- Format -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/format"
                android:layout_weight="1"
                android:layout_marginLeft="30dip"
                android:textSize="20dp"
                android:textStyle="bold"
                style="@style/couleurTexteBase"/>
            <TextView
                android:id="@+id/produitFormat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="33 cl"/>
        </LinearLayout>

        <!-- Type -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:layout_weight="1"
                android:layout_marginLeft="30dip"
                android:textSize="20dp"
                android:textStyle="bold"
                style="@style/couleurTexteBase"/>
            <TextView
                android:id="@+id/produitType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="Bière"/>
        </LinearLayout>

        <!-- Taux Alc -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taux"
                android:layout_weight="1"
                android:layout_marginLeft="30dip"
                android:textSize="20dp"
                android:textStyle="bold"
                style="@style/couleurTexteBase"/>
            <TextView
                android:id="@+id/produitTaux"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="5,2%"
                android:paddingBottom="20dp"/>
        </LinearLayout>

        <Button
            style="@style/btnStyleopal"
            android:id="@+id/buttonAjouterProduit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ajouter"/>
        <Button
            style="@style/btnStyleopal"
            android:id="@+id/buttonLivrerProduit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/livrer"/>
    </LinearLayout>
</ScrollView>